--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "export": "next export"
   },
   "dependencies": {
-    "gray-matter": "^4.0.2",
-    "mongodb": "^3.6.4",
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-markdown": "^5.0.3",
-    "react-syntax-highlighter": "^15.4.3"
+    "gray-matter": "^4.0.3",
+    "mongodb": "^6.17.0",
+    "next": "^15.4.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1"
   }
 }
